Revert "Fixed low contrast issue of labels; moved css for draggable table from paragraphs widget to more generic content-form styles #2899369"
This reverts commit 631790ea5b48f90cbcec34f82e682c59a33477c3.

--- a/sass/content-form-theme.scss
+++ b/sass/content-form-theme.scss
@@ -67,93 +67,6 @@ fieldset.content-form__form-section {
     border-left: 5px solid $primary-color-intense;
     top: 1rem;
   }
-
-  .field-multiple-table {
-    thead {
-      tr {
-        border: 0;
-
-        &:hover {
-          background: transparent;
-        }
-
-        th {
-          background: transparent;
-          color: $gray-medium;
-          border: 0;
-        }
-      }
-    }
-
-    tbody {
-      tr {
-        border-bottom-color: $primary-color-lighter;
-
-        &.draggable {
-          background: transparent;
-
-          &:hover {
-            background: $primary-color-lighter;
-          }
-          &.drag {
-            background: $primary-color-lighter-2;
-
-            .field-multiple-drag {
-              .tabledrag-handle {
-                .handle {
-                  background-image: url(../images/icons/move--primary-blue.svg);
-                }
-              }
-            }
-          }
-        }
-
-        &.drag-previous {
-          background: transparent;
-        }
-      }
-    }
-
-    .field-multiple-drag {
-      position: relative;
-      width: 58px;
-      vertical-align: top;
-      text-align: center;
-      box-sizing: border-box;
-
-      @include for-tablet-landscape-and-up {
-        vertical-align: middle;
-      }
-
-      .js & {
-        .tabledrag-changed {
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 5px;
-          height: 100%;
-          font-size: 0;
-          background: #e09600;
-        }
-
-        .tabledrag-handle {
-          display: inline-block;
-          height: 1.5em;
-          float: none;
-
-          .handle {
-            margin-left: 5px;
-            background: url(../images/icons/move.svg) no-repeat center center;
-
-            @include for-tablet-portrait-and-up {
-              margin-left: 2px;
-            }
-          }
-        }
-      }
-    }
-
-  }
 }
 
 .entity-meta--advanced {
